# controllers/auth/login.js
@@ -1,9 +1,14 @@
 const bcryptjs = require("bcryptjs");
 const { User } = require("../../models/user");
-const { Session } = require("../../models/sessionModel");
+// const { Session } = require("../../models/sessionModel");
 const { RequestError } = require("../../helpers");
 const jwt = require("jsonwebtoken");
-const { SECRET_KEY } = process.env;
+const {
+  SECRET_KEY,
+  SECRET_REFRESH_KEY,
+  ACCESS_TOKEN_EXPIRESIN,
+  REFRESH_TOKEN_EXPIRESIN,
+} = process.env;
 
 const login = async (req, res, next) => {
   const { email, password } = req.body;
@@ -21,21 +26,22 @@ const login = async (req, res, next) => {
   if (!user.verify) {
     throw RequestError(400, "Email not verify");
   }
-  const newSession = await Session.create({
-    uid: user._id,
-  });
+  // const newSession = await Session.create({
+  //   uid: user._id,
+  // });
   const payload = {
     uid: user._id,
-    sid: newSession._id,
+    // sid: newSession._id,
   };
 
-  const token = jwt.sign(payload, SECRET_KEY, { expiresIn: "1h" });
-  const refreshToken = jwt.sign(payload, SECRET_KEY, { expiresIn: "30d" });
-  await User.findByIdAndUpdate(
-    user._id,
-    { token, refreshToken },
-    { new: true }
-  );
+  const token = jwt.sign(payload, SECRET_KEY, {
+    expiresIn: ACCESS_TOKEN_EXPIRESIN,
+  });
+  const refreshToken = jwt.sign(payload, SECRET_REFRESH_KEY, {
+    expiresIn: REFRESH_TOKEN_EXPIRESIN,
+  });
+
+  await User.findByIdAndUpdate(user._id, { token, refreshToken });
   res.status(200).json({
     status: "success",
     code: 200,
